--- a/application/views/index.html
+++ b/application/views/index.html
@@ -26,7 +26,7 @@
             <script src="js/angular.min.js"></script>       
             <script src="js/angular-route.min.js"></script> 
             <script src="js/app.js"></script>
-            <script src="js/Cjsboleta.js"></script>
+            <script src="js/angular-local-storage.js"></script>
             <script src="js/Cjsadministrador.js"></script>
             <script src="js/Cjsproveedor.js"></script>
             <script src="js/Cjsadmin.js"></script>
